DevAccount/src/objects/vehicle__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>vehicles (Account)</relationshipLabel>
        <relationshipName>vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <label>Sample</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>&lt;font color=&quot;#FA8072&quot;&gt;Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>emailaddress__c</fullName>
        <label>&lt;font color=&apos;blue&apos;&gt;Email&lt;/font&gt;</label>
        <type>Email</type>
    </fields>
    <label>vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>